fixed alignment of text in nav divs

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -14,6 +14,7 @@ a:active {
 
 .page-nav-div {
   height: 50px;
+  padding: 14px;
 }
 .page-nav-div:active {
   background-color: ;
@@ -48,4 +49,5 @@ a:active {
 
 .recipe-nav-div {
   height: 30px;
+  padding: 6px;
 }
